--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^5.9.55",
     "axios": "^0.21.1",
     "buefy": "^0.9.4",
+    "bulma-css-vars": "^0.6.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.0.1"
